--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
   <main> 
     <section> 
 
-      <img src="images/image-equilibrium.jpg" alt="equilibrium card image"> 
-
-      <h1> 
+      <div class="container">
+      <a href=#>
+        <img src="images/image-equilibrium.jpg" alt="equilibrium card image">
+      </a>
+        <div>
+        <img class="overlay" src="images/icon-view.svg" alt="view image icon">
+        </div>
+      </div>
+      
+      <a href="#">
+        <h1> 
         Equilibrium #3429
-      </h1>
+        </h1>
+      </a>
 
       <h2> 
         Our Equilibrium collection promotes balance and calm.
@@ -43,7 +52,7 @@
 
       <div class="profile"> 
         <h4> 
-          Creation of <p>Jules Wyvern<p>
+          Creation of <a href="#"><p>Jules Wyvern</p></a>
         </h4>
         <img src="images/image-avatar.png" alt="profile avatar"> 
       </div>
