hovers not overlay

--- a/index.html
+++ b/index.html
@@ -13,14 +13,9 @@
   <main> 
     <section> 
 
-      <div class="container">
-      <a href=#>
-        <img src="images/image-equilibrium.jpg" alt="equilibrium card image">
+      <a class="container" href="#" role="view image">
+        <img src="images/image-equilibrium.jpg" alt="">
       </a>
-        <div>
-        <img class="overlay" src="images/icon-view.svg" alt="view image icon">
-        </div>
-      </div>
       
       <a href="#">
         <h1> 
