hover overlay finished

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
   <main> 
     <section> 
 
-      <a class="container" href="#" role="view image">
-        <img src="images/image-equilibrium.jpg" alt="">
-      </a>
+        <!-- <a class="container" href="#" role="view image"> 
+          <img src="images/image-equilibrium.jpg" alt=""> 
+        </a> -->
+
+        <button name="toggle view" type="button" aria-label="view image">
+          <img src="images/image-equilibrium.jpg" alt="">
+        </button>
       
-      <a href="#">
+      <a class="text" href="#"> 
         <h1> 
         Equilibrium #3429
         </h1>
@@ -47,7 +51,7 @@
 
       <div class="profile"> 
         <h4> 
-          Creation of <a href="#"><p>Jules Wyvern</p></a>
+          Creation of <a class="text" href="#"><p>Jules Wyvern</p></a>
         </h4>
         <img src="images/image-avatar.png" alt="profile avatar"> 
       </div>
